Updates libbib to bibsp

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,8 +3,8 @@
 	url = https://github.com/dbosk/makefiles.git
 	branch = master
 [submodule "libbib"]
-	path = libbib
-	url = https://github.com/dbosk/libbib.git
+	path = bibsp
+	url = https://github.com/dbosk/bibsp.git
 	branch = master
 [submodule "cryptoproofs"]
 	path = cryptoproofs
