--- a/overview/Makefile
+++ b/overview/Makefile
@@ -14,5 +14,5 @@ overview-slides.pdf: ${DEPENDS}
 
 INCLUDE_MAKEFILES=../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
-INCLUDE_LIBBIB=../libbib
-include ${INCLUDE_LIBBIB}/libbib.mk
+INCLUDE_BIBSP=../bibsp
+include ${INCLUDE_BIBSP}/bibsp.mk
