Changes from libbib to bibsp

--- a/pubkey/Makefile
+++ b/pubkey/Makefile
@@ -20,5 +20,5 @@ clean-depends:
 
 INCLUDE_MAKEFILES=../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
-INCLUDE_LIBBIB=../libbib
-include ${INCLUDE_LIBBIB}/libbib.mk
+INCLUDE_BIBSP=../bibsp
+include ${INCLUDE_BIBSP}/bibsp.mk
