--- a/bitcoin/Makefile
+++ b/bitcoin/Makefile
@@ -2,12 +2,12 @@
 all: bitcoin.pdf
 
 FILES=		bitcoin.tex abstract.tex bitcoin.bib
-FILES+= 	libbib.sty
+FILES+= 	bibsp.sty
 
 bitcoin.pdf: ${FILES}
 
 
 INCLUDE_MAKEFILES=../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
-INCLUDE_LIBBIB=../libbib
-include ${INCLUDE_LIBBIB}/libbib.mk
+INCLUDE_BIBSP=../bibsp
+include ${INCLUDE_BIBSP}/bibsp.mk
