--- a/spuriouslab/Makefile
+++ b/spuriouslab/Makefile
@@ -5,10 +5,10 @@ FILES=		spuriouslab.tex aims.tex abstract.tex spuriouslab.bib
 
 spuriouslab.pdf: ${FILES}
 spuriouslab.pdf: llncs biblatex-lncs
-spuriouslab.pdf: libbib.sty
+spuriouslab.pdf: bibsp.sty
 
 
 INCLUDE_MAKEFILES=../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
-INCLUDE_LIBBIB=../libbib
-include ${INCLUDE_LIBBIB}/libbib.mk
+INCLUDE_BIBSP=../bibsp
+include ${INCLUDE_BIBSP}/bibsp.mk
