Adds and updates gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
+crypto/3des.eps
+crypto/aes-round.eps
+crypto/aes.eps
+crypto/asymmetric.eps
+crypto/cbc.eps
+crypto/cfb.eps
+crypto/ctr.eps
+crypto/des-round.eps
+crypto/feistel.eps
+crypto/overview.pdf
+crypto/rsa.eps
+crypto/symmetric.eps
+hashsign/asymmetric.eps
+hashsign/hmac.eps
+hashsign/mac-hash.eps
+hashsign/mac.eps
+pubkey/asymmetric.eps
+pubkey/ccm.eps
+pubkey/cmac.eps
+pubkey/hmac.eps
+pubkey/mac-hash.eps
+pubkey/mac.eps
+pubkey/rsa.eps
+symcrypt/3des.eps
+symcrypt/aes-round.eps
+symcrypt/aes.eps
+symcrypt/asymmetric.eps
+symcrypt/cbc.eps
+symcrypt/cfb.eps
+symcrypt/ctr.eps
+symcrypt/des-round.eps
+symcrypt/feistel.eps
+symcrypt/symmetric.eps
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
