--- a/sidechannels/.gitignore
+++ b/sidechannels/.gitignore
@@ -1,3 +1,5 @@
+sidechannels.pdf
+
 acoustic-bits.jpg
 acoustic-mobile.jpg
 acoustic-setup.jpg
@@ -5,7 +7,6 @@ acoustic-spectrum.jpg
 em-pita-detailed.png
 em-pita.png
 em-spectrum.png
-overview.pdf
 physical-ethernet.png
 physical-human.png
 physical-setup.png
