Updates makefiles, use texgen templates

--- a/sidechannels/Makefile
+++ b/sidechannels/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all
-all: sidechannels.pdf
+all: sidechannels-slides.pdf
 
-SRC=		sidechannels.tex contents.tex abstract.tex sidechannels.bib
+SRC=		sidechannels-slides.tex contents.tex abstract.tex sidechannels.bib
 SRC+= 		acoustic-spectrum.jpg acoustic-bits.jpg
 SRC+= 		acoustic-setup.jpg acoustic-mobile.jpg
 SRC+= 		physical-setup.png physical-ethernet.png physical-human.png
@@ -9,7 +9,7 @@ SRC+= 		physical-spectrum.png
 SRC+= 		em-spectrum.png em-pita.png em-pita-detailed.png
 SRC+= 		em-laptop.png
 
-sidechannels.pdf: ${SRC}
+sidechannels-slides.pdf: ${SRC}
 
 acoustic-spectrum.jpg:
 	wget -O $@ https://www.cs.tau.ac.il/~tromer/acoustic/img/web_manykeys-acoustic.jpg
@@ -45,8 +45,12 @@ em-pita-detailed.png:
 	wget -O $@ https://www.cs.tau.ac.il/~tromer/radioexp/untethered-pita-closeup---annotated.png
 
 
-.PHONY: clean-depends clean-figures
-clean-depends: clean-figures
+.PHONY: clean
+clean:
+	${RM} sidechannels-slides.pdf
+
+.PHONY: distclean clean-depends clean-figures
+clean-depends distclean: clean-figures
 clean-figures:
 	${RM} acoustic-spectrum.jpg acoustic-bits.jpg
 	${RM} acoustic-setup.jpg acoustic-mobile.jpg
