--- a/one-way/Makefile
+++ b/one-way/Makefile
@@ -18,6 +18,8 @@ beamer-didactic.sty: ../beamer-didactic/beamer-didactic.sty
 	${MAKE} -C $(dir $@) $(notdir $@)
 
 bibliography.bib: bibliography.bib(one-way.bib crypto.bib)
+bibliography.bib(one-way.bib): one-way.bib
+bibliography.bib(crypto.bib): crypto.bib
 
 
 .PHONY: clean
