Makes sure the bibliography.bib is built correctly

--- a/one-way/Makefile
+++ b/one-way/Makefile
@@ -18,6 +18,7 @@ beamer-didactic.sty: ../beamer-didactic/beamer-didactic.sty
 	${MAKE} -C $(dir $@) $(notdir $@)
 
 bibliography.bib: bibliography.bib(one-way.bib crypto.bib)
+bibliography.bib(crypto.bib): crypto.bib
 
 
 .PHONY: all
