--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "beamer-didactic"]
 	path = beamer-didactic
 	url = https://github.com/dbosk/beamer-didactic.git
+[submodule "applied-hash/modules/auth"]
+	path = applied-hash/.modules/auth
+	url = https://github.com/OpenSecEd/auth.git
