--- a/applied-hash/blockchains/fig/Makefile
+++ b/applied-hash/blockchains/fig/Makefile
@@ -1,10 +1,11 @@
 .PHONY: all
-all:
+all: pow.pdf preimage.pdf
 
 
 .PHONY: clean
 clean:
-	true
+	${RM} pow.pdf pow.pdf_tex
+	${RM} preimage.pdf preimage.pdf_tex
 
 
 INCLUDE_MAKEFILES=../../../makefiles
