Updates blockchains slide

--- a/applied-hash/blockchains/Makefile
+++ b/applied-hash/blockchains/Makefile
@@ -18,6 +18,7 @@ FIG+=		bitcoin-transfer.png
 FIG+=		merkle-tree.png
 FIGS+=		pow.pdf
 FIGS+=		preimage.pdf
+FIGS+=		mining.pdf
 
 notes.pdf: notes.tex
 notes.pdf: ${SRC} ${DEPENDS} $(addprefix fig/,${FIGS})
