--- a/applied-hash/blockchains/fig/Makefile
+++ b/applied-hash/blockchains/fig/Makefile
@@ -1,11 +1,12 @@
 .PHONY: all
-all: pow.pdf preimage.pdf
+all: pow.pdf preimage.pdf mining.pdf
 
 
 .PHONY: clean
 clean:
 	${RM} pow.pdf pow.pdf_tex
 	${RM} preimage.pdf preimage.pdf_tex
+	${RM} mining.pdf mining.pdf_tex
 
 
 INCLUDE_MAKEFILES=../../../makefiles
