--- a/applied-hash/blockchains/fig/.gitignore
+++ b/applied-hash/blockchains/fig/.gitignore
@@ -4,4 +4,7 @@ pow.pdf
 pow.pdf_tex
 preimage.pdf
 preimage.pdf_tex
-
+distribute-tx-malicious.pdf
+distribute-tx-malicious.pdf_tex
+distribute-tx.pdf
+distribute-tx.pdf_tex
