Expands INL1Written scenarios with detailed cryptographic solutions
Splits 2025.tex into 2025a.tex (police body cams) and 2025b.tex (parcel
delivery boxes). Adds comprehensive worked solutions covering symmetric
encryption, HMAC integrity, digital signatures, and threshold cryptography.
Includes pedagogical notes using variation theory and pQBL frameworks.

--- a/project/Makefile
+++ b/project/Makefile
@@ -5,7 +5,8 @@ LATEXFLAGS+=	-shell-escape
 
 SRC+=		preamble.tex
 SRC+=		abstract.tex contents.tex
-SRC+=		2025.tex
+SRC+=		2025a.tex 2025b.tex
+SRC+=		2024.tex
 SRC+=		bibsp.sty
 
 FIGS+=		figs/Tux.pdf
