Add quiz push/pull support to module.mk
Add targets for pushing quizzes to Canvas LMS:
- push-quizzes: updates quiz settings/instructions only (safe for live quizzes)
- push-quizzes-questions: also replaces all questions (--replace-items)
- force-push-quizzes and force-push-quizzes-questions variants

The push target now includes push-quizzes by default, updating instructions
without touching questions to protect student submissions.

Also adds INL1Quiz-ciphers.json to week-1 with QUIZZES variable.

--- a/modules/week-1/Makefile
+++ b/modules/week-1/Makefile
@@ -6,6 +6,8 @@ PULL_MODULE_RE ?= $(MODULE_RE)
 PAGES += lecture-intro.md
 PAGES += lecture-ciphers.md
 
+QUIZZES += INL1Quiz-ciphers.json
+
 ASSIGNMENTS += assignments/hac-ch6-stream-ciphers.md
 ASSIGNMENTS += assignments/hac-ch7-block-ciphers.md
 ASSIGNMENTS += assignments/cryptanalysis-of-ciphertexts.md
@@ -23,6 +25,12 @@ pull-pages:
 		|| canvaslms pages view -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Lecture .*: Intro" > lecture-intro.md
 	canvaslms pages view -c "${COURSE}" -M "${MODULE_RE}" -p "Lecture .*: Ciphers" > lecture-ciphers.md \
 		|| canvaslms pages view -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Lecture .*: Ciphers" > lecture-ciphers.md
+
+.PHONY: pull-quizzes
+pull-quizzes:
+	canvaslms quizzes view -c "${COURSE}" -M "${MODULE_RE}" \
+		-a "INL1Quiz Ciphers" \
+		> quizzes/INL1Quiz-ciphers.json
 
 .PHONY: pull-assignments
 pull-assignments:
