--- a/modules/week-2/Makefile
+++ b/modules/week-2/Makefile
@@ -3,9 +3,9 @@ MODULE_RE ?= Week 2
 PULL_COURSE ?= tilkry25
 PULL_MODULE_RE ?= $(MODULE_RE)
 
-PAGES += lecture-hash-functions.md
+PAGES += lecture-hash-functions.html
 PAGES += lecture-applied-hash-functions.md
-PAGES += lecture-asymmetric-crypto.md
+PAGES += lecture-asymmetric-crypto.html
 
 ASSIGNMENTS += assignments/hac-ch9-hash-functions.md
 ASSIGNMENTS += assignments/hac-ch8-public-key-encryption.md
@@ -16,12 +16,16 @@ include ../module.mk
 # Note: Canvas treats module/page selectors as regexes.
 .PHONY: pull-pages
 pull-pages:
+	canvaslms pages view --html -c "${COURSE}" -M "${MODULE_RE}" -p "Cryptographic hash functions" > lecture-hash-functions.html \
+		|| canvaslms pages view --html -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Cryptographic hash functions" > lecture-hash-functions.html
 	canvaslms pages view -c "${COURSE}" -M "${MODULE_RE}" -p "Cryptographic hash functions" > lecture-hash-functions.md \
 		|| canvaslms pages view -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Cryptographic hash functions" > lecture-hash-functions.md
 	canvaslms pages view -c "${COURSE}" -M "${MODULE_RE}" -p "Applied hash functions" > lecture-applied-hash-functions.md \
 		|| printf '%s\n' '# TODO: add content for Applied hash functions.' > lecture-applied-hash-functions.md
 	canvaslms pages view -c "${COURSE}" -M "${MODULE_RE}" -p "Asymmetric crypto" > lecture-asymmetric-crypto.md \
 		|| canvaslms pages view -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Asymmetric crypto" > lecture-asymmetric-crypto.md
+	canvaslms pages view --html -c "${COURSE}" -M "${MODULE_RE}" -p "Asymmetric crypto" > lecture-asymmetric-crypto.md \
+		|| canvaslms pages view --html -c "${PULL_COURSE}" -M "${PULL_MODULE_RE}" -p "Asymmetric crypto" > lecture-asymmetric-crypto.md
 
 .PHONY: pull-assignments
 pull-assignments:
