--- a/modules/week-2/lecture-hash-functions/Makefile
+++ b/modules/week-2/lecture-hash-functions/Makefile
@@ -6,16 +6,10 @@ SRC+=		abstract.tex bibliography.bib
 
 FIGURES+=	surjection.eps hashfunc.eps
 
-DEPENDS+=	bibsp.sty beamer-didactic.sty
+DEPENDS+=	bibsp.sty didactic.sty
 
 one-way-slides.pdf: one-way-slides.tex ${SRC} ${FIGURES}
 one-way-slides.pdf: ${DEPENDS}
-
-beamer-didactic.sty: ../beamer-didactic/beamer-didactic.sty
-	${LN} $< $@
-
-../beamer-didactic/beamer-didactic.sty:
-	${MAKE} -C $(dir $@) $(notdir $@)
 
 bibliography.bib: bibliography.bib(one-way.bib crypto.bib)
 
@@ -45,8 +39,10 @@ distclean:
 	${MAKE} -C ../beamer-didactic clean distclean
 
 
-INCLUDE_MAKEFILES=../makefiles
+INCLUDE_MAKEFILES=../../../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
 include ${INCLUDE_MAKEFILES}/doc.mk
-INCLUDE_BIBSP=../bibsp
+INCLUDE_BIBSP=../../../bibsp
 include ${INCLUDE_BIBSP}/bibsp.mk
+INCLUDE_DIDACTIC=../../../beamer-didactic
+include ${INCLUDE_DIDACTIC}/didactic.mk
