Update tutorial Makefile for bibsp dependencies

--- a/applied-hash/tutorial/Makefile
+++ b/applied-hash/tutorial/Makefile
@@ -6,11 +6,14 @@ LATEXFLAGS+=	-shell-escape
 SRC+=		preamble.tex
 SRC+=		abstract.tex contents.tex
 
+DEPENDS+=	bibsp.sty
+DEPENDS+=	libbib.sty
+
 notes.pdf: notes.tex
-notes.pdf: ${SRC}
+notes.pdf: ${SRC} ${DEPENDS}
 
 slides.pdf: slides.tex
-slides.pdf: ${SRC}
+slides.pdf: ${SRC} ${DEPENDS}
 
 
 .PHONY: clean
@@ -20,3 +23,5 @@ clean:
 
 INCLUDE_MAKEFILES=../../makefiles
 include ${INCLUDE_MAKEFILES}/tex.mk
+INCLUDE_BIBSP=../../bibsp
+include ${INCLUDE_BIBSP}/bibsp.mk
