Moves applied-hash into modules/week-2/lecture-applied-hash

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	path = beamer-didactic
 	url = https://github.com/dbosk/beamer-didactic.git
 [submodule "applied-hash/modules/auth"]
-	path = applied-hash/.modules/auth
+	path = modules/week-2/lecture-applied-hash/.modules/auth
 	url = https://github.com/OpenSecEd/auth.git
 [submodule "protocols"]
 	path = protocols
